--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 .idea/dataSources/1f800ab2-f793-462b-bc69-6bc07ef54b5d/storage_v2/_src_/schema/main.uQUzAA.meta
 .idea/ece517p2.iml
 .idea/workspace.xml
+.idea/ece517p2.iml
+.idea/workspace.xml
