--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@
 .idea/workspace.xml
 .idea/ece517p2.iml
 .idea/workspace.xml
+.idea/.generators
+.idea/.rakeTasks
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/vcs.xml
+.idea/vcs.xml
