--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -5,6 +5,7 @@ ruby '2.4.5'
 
 gem 'wdm', '>= 0.1.0'
 gem 'coffee-script-source', '1.8.0'
+gem "administrate"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.2'
