--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -1,10 +1,9 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.4.5'
+ruby '2.3.7'
 
-gem 'wdm', '>= 0.1.0'
-gem 'coffee-script-source', '1.8.0'
+
 gem "administrate"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
@@ -22,7 +21,7 @@ gem 'uglifier', '>= 1.3.0'
 
 gem 'devise'
 
-gem 'carrierwave'
+gem 'carrierwave', '~> 1.0'
 
 gem 'pundit'
 
