add googel sign in as a customer feature

--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -5,6 +5,10 @@ ruby '2.3.7'
 
 gem "administrate"
 
+# gem 'google_sign_in'
+
+gem "omniauth-google-oauth2", "~> 0.2.1"
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.2'
 # Use sqlite3 as the database for Active Record
