--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -7,6 +7,8 @@ gem "administrate"
 
 # gem 'google_sign_in'
 
+gem "figaro"
+
 gem "omniauth-google-oauth2", "~> 0.2.1"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
