--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -4,12 +4,14 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '2.4.5'
 gem 'wdm', '>= 0.1.0'
 gem 'coffee-script-source', '1.8.0'
+gem 'figaro', '1.1.1'
 
 gem "administrate"
+gem 'filterrific'
 
 # gem 'google_sign_in'
 
-gem "figaro"
+#gem "figaro"
 
 gem "omniauth-google-oauth2", "~> 0.2.1"
 
