--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -2,9 +2,9 @@ source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 
-ruby '2.3.7'
-
-
+ruby '2.4.5'
+gem 'wdm', '>= 0.1.0'
+gem 'coffee-script-source', '1.8.0'
 gem 'figaro', '1.1.1'
 
 
