--- a/project2_1/test/fixtures/reviews.yml
+++ b/project2_1/test/fixtures/reviews.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  review: MyString
+  subject: MyString
+  message: MyText
 
 two:
-  review: MyString
+  subject: MyString
+  message: MyText
