--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -3,16 +3,11 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '2.3.7'
 
-
 gem 'figaro', '1.1.1'
 
-
 gem "administrate"
+
 gem 'filterrific'
-
-# gem 'google_sign_in'
-
-#gem "figaro"
 
 gem "omniauth-google-oauth2", "~> 0.2.1"
 
@@ -71,6 +66,9 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+
+  gem 'rspec-rails', '~> 3.8'
+
 end
 
 group :test do
