--- a/project2_1/test/fixtures/users.yml
+++ b/project2_1/test/fixtures/users.yml
@@ -4,8 +4,26 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+admin:
+  name: admin
+  role: admin
+  email: admin@gmail.com
+#  password: 123greetings
+  encrypted_password: <%= User.new.send(:password_digest, '123greetings') %>
 # column: value
 #
-two: {}
-# column: value
+agent:
+  name: agent
+  role: agent
+  email: agent@gmail.com
+#  password: 123greetings
+  encrypted_password: <%= User.new.send(:password_digest, '123greetings') %>
+
+customer:
+  name: customer
+  role: customer
+  email: customer@gmail.com
+#  password: 123greetings
+  encrypted_password: <%= User.new.send(:password_digest, '123greetings') %>
+
+
