--- a/project2_1/Gemfile
+++ b/project2_1/Gemfile
@@ -1,8 +1,9 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.3.7'
-
+ruby '2.4.5'
+gem 'wdm', '>= 0.1.0'
+gem 'coffee-script-source', '1.8.0'
 
 gem 'figaro', '1.1.1'
 
@@ -62,7 +63,10 @@ gem 'bootsnap', '>= 1.1.0', require: false
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem "rspec-rails"
 end
+
+gem 'simplecov', require: false, group: :test
 
 group :development do
   # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
